--- a/A05-Mapping-rates.Rmd
+++ b/A05-Mapping-rates.Rmd
@@ -5,7 +5,7 @@ source("package_list.R")
 get.pckg.info("A05-Mapping-rates.Rmd") 
 ```
 
-In this exercise, we'll make use of `sp`'s `plot` method instead of `tmap` to take advantage of `sp`'s *scaled* keys which will prove insightful when exploring rate mapping techniques that adopt none uniform classification schemes.
+In this exercise, we'll make use of `sf`'s `plot` method instead of `tmap` to take advantage of `sf`'s *scaled* keys which will prove insightful when exploring rate mapping techniques that adopt none uniform classification schemes.
 
 The following libraries are used in the examples that follow.
 
@@ -13,7 +13,8 @@ The following libraries are used in the examples that follow.
 library(spdep)
 library(classInt)
 library(RColorBrewer)
-library(rgdal)
+library(sf)
+library(sp)
 ```
 
 Next, we'll initialize some color palettes.
@@ -26,18 +27,21 @@ pal3 <- c(brewer.pal(9,"Greys"), "#FF0000")
 The Auckland dataset from the `spdep` package will be used throughout this exercise. Some of the graphics that follow are R reproductions of Bailey and Gatrell's book, *Interactive Spatial Data Analysis* [@BaileyGatrell].
 
 ```{r message=FALSE, warning=FALSE}
-auckland <- readOGR(system.file("shapes/auckland.shp", package="spData")[1])
+auckland <- st_read(system.file("shapes/auckland.shp", package="spData")[1])
 ```
 
 The Auckland data represents total infant deaths (under the age of five) for Auckland, New Zealand, spanning the years 1977 through 1985 for different census area units. The following block of code maps these counts by area. Both equal interval and quantile classification schemes of the same data are mapped.
 
-```{r message=FALSE, tidy=FALSE,warning=FALSE, fig.height=4, fig.width=9}
+```{r message=FALSE, tidy=FALSE,warning=FALSE, fig.height=4, fig.width=5, echo=2:6}
+OP <-par(las=1, omi=c(0,0,0,0.6))
 brks1 <- classIntervals(auckland$M77_85, n = 6, style = "equal")
 brks2 <- classIntervals(auckland$M77_85, n = 6, style = "quantile")
-print(spplot(auckland, "M77_85", at = brks1$brks, col.regions = pal1)
-      ,position=c(0,0,.5,1),more=T)
-print(spplot(auckland, "M77_85", at = brks2$brks, col.regions = pal1)
-      ,position=c(0.5,0,1,1),more=T)
+
+plot(auckland["M77_85"], breaks = brks1$brks, pal = pal1, at = round(brks1$brks,2),
+     main = "Equal interval breaks", key.pos = 4, las = 1)
+plot(auckland["M77_85"], breaks = brks2$brks, pal = pal1, at = brks2$brks,
+     main = "Quantile breaks", key.pos = 4, las = 1)
+par(OP)
 ```
 
 These are examples of **choropleth** maps (*choro* = area and *pleth* = value) where some attribute  (an enumeration of child deaths in this working example) is aggregated over a defined area (e.g. census area units) and displayed using two different classification schemes.
@@ -57,14 +61,16 @@ mor <- auckland$M77_85
 
 Next, we will compute the raw rates (infant deaths per 1000 individuals per year) and map this rate by census unit area. Both quantile and equal interval classification schemes of the same data are mapped.
 
-```{r message=FALSE,tidy=FALSE, warning=FALSE, fig.height=4, fig.width=9}
+```{r message=FALSE,tidy=FALSE, warning=FALSE, fig.height=4, fig.width=5, echo=2:6}
+OP <-par(las=1, omi=c(0,0,0,0.6))
 auckland$raw.rate <- mor / pop * 1000
 brks1 <- classIntervals(auckland$raw.rate, n = 6, style = "equal")
 brks2 <- classIntervals(auckland$raw.rate, n = 6, style = "quantile")
-print(spplot(auckland, "raw.rate", at = brks1$brks, col.regions = pal1)
-      ,position=c(0,0,.5,1),more=T)
-print(spplot(auckland, "raw.rate", at = brks2$brks, col.regions = pal1)
-      ,position=c(0.5,0,1,1),more=T)
+plot(auckland["raw.rate"], breaks = brks1$brks, pal = pal1, at = round(brks1$brks,2),
+     main = "Equal interval breaks", key.pos = 4, las = 1)
+plot(auckland["raw.rate"], breaks = brks2$brks, pal = pal1, at = round(brks2$brks,2),
+     main = "Quantile breaks", key.pos = 4, las = 1)
+par(OP)
 ```
 
 Note how our perception of the distribution of infant deaths changes when looking at mapped raw rates vs. counts. A north-south trend in perceived "abnormal" infant deaths is no longer apparent in this map.
@@ -77,13 +83,14 @@ where $n_i$ is the population count within census unit area $i$ and $mortality_{
 
 This chunk of code replicates Bailey and Gatrell's figure 8.1 with the one exception that the color scheme is reversed (Bailey and Gatrell assign lighter hues to higher numbers).
 
-```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=4}
+```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=5}
 auck.rate <- sum(mor) / sum(pop)
 mor.exp   <- pop * auck.rate  # Expected count over a nine year period
 auckland$rel.rate <- 100 * mor / mor.exp
 brks <- classIntervals(auckland$rel.rate, n = 6, style = "fixed", 
                      fixedBreaks = c(0,47, 83, 118, 154, 190, 704))
-spplot(auckland, "rel.rate", at = brks$brks,col.regions=pal1)
+plot(auckland["rel.rate"], breaks =  brks$brks, at = brks$brks, pal = pal1,
+     key.pos = 4, las = 1)
 ```
 
 ## Dykes and Unwin's chi-square statistic {-}
@@ -94,11 +101,12 @@ $$\frac{O_i - E_i}{\sqrt{E_i}} $$
 
 This has the effect of creating a distribution of values closer to normal (as opposed to a Poisson distribution of rates and counts encountered thus far). We can therefore apply a diverging color scheme where green hues represent less than expected rates and red hues represent greater than expected rates.
 
-```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=4}
+```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=5}
 auckland$chi.squ = (mor - mor.exp) / sqrt(mor.exp)
 brks <- classIntervals(auckland$chi.squ, n = 6, style = "fixed", 
                       fixedBreaks = c(-5,-3, -1, -2, 0, 1, 2, 3, 5))
-spplot(auckland, "chi.squ", at = brks$brks,col.regions=rev(pal2))
+plot(auckland["chi.squ"], breaks = brks$brks, at = brks$brks, pal=rev(pal2),
+     key.pos = 4, las = 1)
 ```
 
 ## Unstable ratios {-}
@@ -107,7 +115,8 @@ One problem with the various techniques used thus far is their sensitivity (henc
 
 ```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=4}
 brks <- classIntervals(auckland$Und5_81, n = 6, style = "equal")
-spplot(auckland, "Und5_81", at = brks$brks,col.regions=pal1)
+plot(auckland["Und5_81"], breaks = brks$brks,  at = brks$brks, pal = pal1,
+     key.pos = 4, las = 1))
 ```
 
 Note the variability in population count with some areas encompassing fewer than 50 infants. If there is just one death in that census unit, the death rate would be reported as $1/50 * 1000$ or 20 per thousand infants--far more than then the `r sprintf("%3.2f",auck.rate * 1000)` per thousand rate for our Auckland data set. Interestingly, the three highest raw rates in Auckland (`r auckland$raw.rate[auckland$raw.rate > 9]` deaths per 1000) are associated with some of the smallest underlying population counts (`r auckland$Und5_81[auckland$raw.rate > 9]` infants under 5). 
@@ -137,15 +146,17 @@ The idea behind Bayesian approach is to compare the value in some area $i$ to so
 
 _aka Global moment estimator of infant mortality per 1000 per year_
 
-```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=9}
+```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=5, echo=2:7}
+OP <-par(las=1, omi=c(0,0,0,0.6))
 EB.est         <- EBest(auckland$M77_85, auckland$Und5_81 * 9 )
 auckland$EBest <- EB.est$estmm * 1000
 brks1          <- classIntervals(auckland$EBest, n = 10, style = "quantile")
 brks2          <- classIntervals(auckland$raw.rate, n = 10, style = "quantile")
-print(spplot(auckland, "EBest", at = brks1$brks, col.regions = pal3, 
-             main="EB rates") ,position=c(0,0,.5,1),more=T)
-print(spplot(auckland, "raw.rate", at = brks2$brks, col.regions = pal3, 
-             main="Raw Rates") ,position=c(0.5,0,1,1),more=T)
+plot(auckland["EBest"], breaks = brks1$brks, at = round(brks1$brks, 2), pal = pal3, 
+             main="EB rates", key.pos = 4, las = 1) 
+plot(auckland["raw.rate"], breaks = brks2$brks, at = round(brks2$brks, 2), pal = pal3,
+             main="Raw Rates", key.pos = 4, las = 1) 
+par(OP)
 ```
 
 The census units with the top 10% rates are highlighted in red.
@@ -172,16 +183,18 @@ par(op)
 
 The *a priori* mean and variance need not be aspatial (i.e. the *prior* distribution being the same for the entire Auckland study area). The adjusted estimated rates can be shrunk towards a *local* mean instead. Such technique is referred to as *local* empirical Bayes rate estimates. In the following example, we define *local* as consisting of all first order adjacent census unit areas.
 
-```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=9}
+```{r message=FALSE, warning=FALSE, tidy=FALSE, fig.height=4, fig.width=5, echo = 2:8}
+OP <-par(las=1, omi=c(0,0,0,0.6))
 nb      <- poly2nb(auckland) 
 EBL.est <- EBlocal(auckland$M77_85, 9*auckland$Und5_81, nb)
 auckland$EBLest <- EBL.est$est * 1000
 brks1           <- classIntervals(auckland$EBLest, n = 10, style = "quantile")
 brks2           <- classIntervals(auckland$raw.rate, n = 10, style = "quantile")
-print(spplot(auckland, "EBLest", at = brks1$brks, col.regions = pal3, 
-             main="Local EB rates") ,position=c(0,0,.5,1),more=T)
-print(spplot(auckland, "raw.rate", at = brks2$brks, col.regions = pal3, 
-             main="Raw Rates") ,position=c(0.5,0,1,1),more=T)
+plot(auckland["EBLest"], breaks =  brks1$brks, at = round(brks1$brks,2), pal = pal3, 
+           main = "Local EB rates", key.pos = 4, las = 1)
+plot(auckland["raw.rate"], breaks =  brks2$brks, at = round(brks2$brks,2), pal = pal3, 
+             main = "Raw Rates", key.pos = 4, las = 1)
+par(OP)
 ```
 
 The census units with the top 10% rates are highlighted in red.
